Fix contrast

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -538,7 +538,7 @@ body.pt .donate .pt {
 
 #crumbs li {
   display: inline-block;
-  color: #777;
+  color: #666;
   padding-right: 12px;
 }
 
@@ -556,7 +556,7 @@ body.pt .donate .pt {
 
 #crumbs li a:link,
 #crumbs li a:visited {
-  color: #777;
+  color: #666;
   text-decoration: none;
 }
 
@@ -590,7 +590,7 @@ body.pt .donate .pt {
 }
 
 .pageheader #otherlanguages li a {
-  color: #888888;
+  color: #666;
   text-decoration: none;
 }
 
@@ -688,7 +688,7 @@ div.trail .trailnext {
 /* Links */
 
 a {
-  color: #888;
+  color: #666;
   text-decoration: none;
 }
 
